Sign out finished

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MoneyMaster</title>
-    <link rel="stylesheet" href="https://nispar2009.github.io/spectrum_stylr/Fun/Spectrum.css">
-</head>
-<body>
-    <h1 class="heading">Welcome to MoneyMaster, {{ user[0] }}!</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block t %}Home{% endblock %}
+
+{% block b %}
+
+<h1 class="heading">Welcome to MoneyMaster, {{ user }}!</h1>
+
+{% endblock %}
