--- a/templates/login.html
+++ b/templates/login.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login/Signup</title>
-    <link rel="stylesheet" href="https://nispar2009.github.io/spectrum_stylr/Fun/Spectrum.css">
+    <title>Login/Signup &middot; MoneyMaster</title>
+    <link rel="stylesheet" href="https://nispar2009.github.io/spectrum_stylr/Retro/Spectrum.css">
 </head>
+
 <body>
     <h2 class="heading">Login/Signup</h2>
     <form action="/" method="post">
-        <input type="text" name="username" class="form" placeholder="Username...">
+        <input type="text" name="username" class="form" placeholder="Username..." required>
         <br><br>
-        <input type="password" name="password" class="form" placeholder="Password...">
+        <input type="password" name="password" class="form" placeholder="Password..." required>
         <br><br>
         <button type="submit" class="btn btn-turq">Submit</button>
     </form>
 </body>
+
 </html>
