--- a/templates/base.html
+++ b/templates/base.html
@@ -15,10 +15,12 @@
     <div class="nav-desktop">
         <a class="nav-desktop-item nav-desktop-link nav-desktop-brand" href="/">Home</a>
         <a class="nav-desktop-item nav-desktop-link" href="/msg">Messages</a>
-        <a class="nav-desktop-item nav-desktop-link" href="http://127.0.0.1:5001">BoxBuddy</a>
-        <button class="btn nav-btn" onclick="redirect('/signout')">Sign out</button>
+        <a class="nav-desktop-item nav-desktop-link" href="http://127.0.0.1:5002">BoxBuddy</a>
     </div>
     {% block b %}{% endblock %}
+    <footer class="footer">
+        &copy; 2023 <a href="http://127.0.0.1:5000" class="footer-link">CashCo</a>
+    </footer>
 </body>
 
 </html>
